src/objects/Charge__c.object
<CustomObject>
    <fields>
        <fullName>Accrue_Interest_From__c</fullName>
        <inlineHelpText>This is the date from which the interest on the charge will be calculated. If this is not mentioned interest will be calculated from the date the charge was incurred.</inlineHelpText>
        <label>Accrue Interest From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculated_Interest2__c</fullName>
        <formula>Original_Amount__c * ( Interest_Rate__c ) *  ($User.Current_Branch_s_System_Date__c -  Accrue_Interest_From__c ) / (365)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calculated_Interest3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Calculated Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charge_Type__c</fullName>
        <label>Charge Type</label>
        <picklist>
            <picklistValues>
                <fullName>Late Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSF Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay-Off Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <inlineHelpText>This is the date the charge was incurred.</inlineHelpText>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dues_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dues Details</label>
        <referenceTo>Loan_account_Due_Details__c</referenceTo>
        <relationshipLabel>Charges</relationshipLabel>
        <relationshipName>Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The associated Fee. The Fee object is used in case of automatic application of a charge. For instance, the late fees is charged automatically on a loan.</inlineHelpText>
        <label>Fee</label>
        <referenceTo>Fee__c</referenceTo>
        <relationshipLabel>Charges</relationshipLabel>
        <relationshipName>Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interest_Bearing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this option if the charge is interest bearing.</inlineHelpText>
        <label>Interest Bearing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <inlineHelpText>This is the interest rate to be applied on the charge (if applicable)</inlineHelpText>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loan_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The associated loan.</inlineHelpText>
        <label>Loan Account</label>
        <referenceTo>Loan_Account__c</referenceTo>
        <relationshipLabel>Charges</relationshipLabel>
        <relationshipName>Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Amount__c</fullName>
        <inlineHelpText>The original amount of the charge.</inlineHelpText>
        <label>Original Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paid_Amount__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>The amount that has been paid.</inlineHelpText>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <inlineHelpText>This text can be used to provide additional information about the charge.</inlineHelpText>
        <label>Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Due_Amount__c</fullName>
        <formula>Original_Amount__c +  Calculated_Interest3__c -  Paid_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Waive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this field if this charge must be waived off.</inlineHelpText>
        <label>Waive</label>
        <type>Checkbox</type>
    </fields>
    <label>Charge</label>
    <nameField>
        <displayFormat>CHG-{00000000}</displayFormat>
        <label>Charge Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>